# rustclr

./: Cargo.toml  rust-toolchain.toml
src/: error.rs  lib.rs  pwsh.rs  string.rs  variant.rs
src/clr/: file.rs  hosting.rs  mod.rs  runtime.rs
src/com/: appdomain.rs  assembly.rs  assembly_identity.rs  assembly_manager.rs  assembly_store.rs  iclrmetahost.rs  iclrruntimehost.rs  iclrruntimeinfo.rs  icorruntimehost.rs  ienumunknown.rs  ihostcontrol.rs  ipropertyinfo.rs  itype.rs  method_info.rs  mod.rs
src/wrappers/: bstr.rs  mod.rs  safearray.rs  variant.rs
