[package]
name = "rustclr"
version = "0.3.4"
edition = "2024"
license = "MIT"
readme = "README.md"
authors = ["João Victor"]
description = "Host CLR and run .NET binaries using Rust"
repository = "https://github.com/joaoviictorti/rustclr"
homepage = "https://github.com/joaoviictorti/rustclr"
documentation = "https://docs.rs/rustclr/latest"
keywords = ["dotnet", "clr", "windows", "rust", "redteam"]
categories = ["os", "security", "api-bindings"]
include = [
  "src/**",
  "Cargo.toml",
  "README.md",
  "LICENSE"
]

[dependencies]
dinvk = "0.4.2"
const-encrypt = { path = "../const-encrypt" }
uuid = { version = "1.16.0", default-features = false }
spin = { version = "0.10.0", default-features = false }
bitflags = { version = "2.10.0", default-features = false }

[dependencies.windows]
version = "0.62"
features = [
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_Variant",
  "Win32_System_Memory",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemServices",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_SystemInformation",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_System_IO",
  "Win32_UI_Shell",
  "Win32_System_Com_StructuredStorage"
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-gnu", "x86_64-pc-windows-msvc"]
